@@ -1,3 +1,9 @@
+2013-01-07  Thorsten Glaser <tg@mirbsd.org>
+
+	* src/m68k/ffi.c (CIF_FLAGS_SINT8, CIF_FLAGS_SINT16): Define.
+	(ffi_prep_cif_machdep): Fix 8-bit and 16-bit signed calls.
+	* src/m68k/sysv.S (ffi_call_SYSV, ffi_closure_SYSV): Ditto.
+
 2013-01-04  Anthony Green  <green@moxielogic.com>
 
 	* Makefile.am (AM_CFLAGS): Don't automatically add -fexceptions
